feign call through

--- a/thrusdaytask/bankrestapicall/bank/src/main/resources/application.properties
+++ b/thrusdaytask/bankrestapicall/bank/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.show-sql=true
 
 logging.file=D:/Users/trainee/Desktop/bank/log4jproperties.log
 looging.level.root=INFO
+
+spring.application.name=bank-client
+#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+
+hystrix.command.default.execution.timeout.enabled=false   
