--- a/thrusdaytask/bankrestapicall/bank/src/main/resources/application.properties
+++ b/thrusdaytask/bankrestapicall/bank/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.application.name=bank-client
 #eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 
 hystrix.command.default.execution.timeout.enabled=false   
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
