--- a/RabbitmqBankAudit/bank2/src/main/resources/application.properties
+++ b/RabbitmqBankAudit/bank2/src/main/resources/application.properties
@@ -12,8 +12,6 @@ looging.level.root=INFO
 spring.application.name=bank-client
 #eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 
-hystrix.command.default.execution.timeout.enabled=false   
+#hystrix.command.default.execution.timeout.enabled=false   
 spring.rabbitmq.host = 127.0.0.1
 spring.rabbitmq.port = 5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
